--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <div class="container">
-  <app-customer></app-customer>
+<router-outlet></router-outlet>
 </div>
+<app-footer></app-footer>
